--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -51,9 +51,12 @@
 \usetikzlibrary{arrows.meta} % arrows for theory diagrams
 \usetikzlibrary{trees}
 
+\usepackage{todonotes}
+
 % PDF links
 \usepackage[hidelinks]{hyperref} % backref=page
 
 \input{common/layout}
 
 \input{common/macros}
+
