--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,94 @@
+@techreport{hyvarinen2005,
+  title = {Estimation of {{Non-Normalized Statistical Models}} by {{Score Matching}}},
+  author = {Hyv{\"a}rinen, Aapo},
+  year = {2005},
+  journal = {Journal of Machine Learning Research},
+  volume = {6},
+  pages = {695--709},
+}
+
+@InProceedings{pmlr-v48-zhai16,
+  title = 	 {Deep Structured Energy Based Models for Anomaly Detection},
+  author = 	 {Zhai, Shuangfei and Cheng, Yu and Lu, Weining and Zhang, Zhongfei},
+  booktitle = 	 {Proceedings of The 33rd International Conference on Machine Learning},
+  pages = 	 {1100--1109},
+  year = 	 {2016},
+  editor = 	 {Balcan, Maria Florina and Weinberger, Kilian Q.},
+  volume = 	 {48},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {New York, New York, USA},
+  month = 	 {20--22 Jun},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v48/zhai16.pdf},
+  url = 	 {https://proceedings.mlr.press/v48/zhai16.html},
+}
+
+
+@inproceedings{energy_ood,
+ author = {Liu, Weitang and Wang, Xiaoyun and Owens, John and Li, Yixuan},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
+ pages = {21464--21475},
+ publisher = {Curran Associates, Inc.},
+ title = {Energy-based Out-of-distribution Detection},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/f5496252609c43eb8a3d147ab9b9c006-Paper.pdf},
+ volume = {33},
+ year = {2020}
+}
+
+@inproceedings{
+Grathwohl2020Your,
+title={Your classifier is secretly an energy based model and you should treat it like one},
+author={Will Grathwohl and Kuan-Chieh Wang and Joern-Henrik Jacobsen and David Duvenaud and Mohammad Norouzi and Kevin Swersky},
+booktitle={International Conference on Learning Representations},
+year={2020},
+url={https://openreview.net/forum?id=Hkxzx0NtDB}
+}
+
+@book{vershynin2018high,
+  title={High-dimensional probability: An introduction with applications in data science},
+  author={Vershynin, Roman},
+  volume={47},
+  year={2018},
+  publisher={Cambridge university press}
+}
+
+@article{ruffUnifyingReviewDeep2021,
+  title = {A {{Unifying Review}} of {{Deep}} and {{Shallow Anomaly Detection}}},
+  author = {Ruff, Lukas and Kauffmann, Jacob R. and Vandermeulen, Robert A. and Montavon, Gr{\'e}goire and Samek, Wojciech and Kloft, Marius and Dietterich, Thomas G. and M{\"u}ller, Klaus-Robert},
+  year = {2021},
+  month = may,
+  journal = {Proceedings of the IEEE},
+  volume = {109},
+  number = {5},
+  pages = {756--795},
+  issn = {1558-2256},
+  doi = {10.1109/JPROC.2021.3052449},
+}
+
+@inproceedings{bergmann2020uninformed,
+  title={Uninformed students: Student-teacher anomaly detection with discriminative latent embeddings},
+  author={Bergmann, Paul and Fauser, Michael and Sattlegger, David and Steger, Carsten},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={4183--4192},
+  year={2020}
+}
+
+@article{kascenasRoleNoiseDenoising2023,
+  title = {The Role of Noise in Denoising Models for Anomaly Detection in Medical Images},
+  author = {Kascenas, Antanas and Sanchez, Pedro and Schrempf, Patrick and Wang, Chaoyang and Clackett, William and Mikhael, Shadia S. and Voisey, Jeremy P. and Goatman, Keith and Weir, Alexander and Pugeault, Nicolas and Tsaftaris, Sotirios A. and O'Neil, Alison Q.},
+  year = {2023},
+  month = sep,
+  journal = {Medical Image Analysis},
+  pages = {102963},
+  issn = {13618415},
+  doi = {10.1016/j.media.2023.102963},
+  urldate = {2023-09-21},
+  langid = {english},
+  keywords = {autoencoder,baseline},
+}
+
+
 @inproceedings{tschuchnig_anomaly_2022,
 	title = {Anomaly detection in medical imaging-a mini review},
 	booktitle = {Data {Science}–{Analytics} and {Applications}: {Proceedings} of the 4th {International} {Data} {Science} {Conference}–{iDSC2021}},
@@ -164,6 +255,55 @@ Publisher: Association for Computing Machinery},
 	pages = {756--795},
 }
 
+@article{shannon_1948,
+  author={Shannon, C. E.},
+  journal={The Bell System Technical Journal}, 
+  title={A mathematical theory of communication}, 
+  year={1948},
+  volume={27},
+  number={3},
+  pages={379-423},
+  doi={10.1002/j.1538-7305.1948.tb01338.x}
+}
+
+@misc{
+nalisnick2020detecting,
+title={Detecting Out-of-Distribution Inputs to Deep Generative Models Using Typicality},
+author={Eric Nalisnick and Akihiro Matsukawa and Yee Whye Teh and Balaji Lakshminarayanan},
+year={2020},
+url={https://openreview.net/forum?id=r1lnxTEYPS}
+}
+
+@inproceedings{why_norm_fails,
+ author = {Kirichenko, Polina and Izmailov, Pavel and Wilson, Andrew G},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Larochelle and M. Ranzato and R. Hadsell and M.F. Balcan and H. Lin},
+ pages = {20578--20589},
+ publisher = {Curran Associates, Inc.},
+ title = {Why Normalizing Flows Fail to Detect Out-of-Distribution Data},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/ecb9fe2fbb99c31f567e9823e884dbec-Paper.pdf},
+ volume = {33},
+ year = {2020}
+}
+
+@inproceedings{
+nalisnick2018do,
+title={Do Deep Generative Models Know What They Don't Know? },
+author={Eric Nalisnick and Akihiro Matsukawa and Yee Whye Teh and Dilan Gorur and Balaji Lakshminarayanan},
+booktitle={International Conference on Learning Representations},
+year={2019},
+url={https://openreview.net/forum?id=H1xwNhCcYm},
+}
+
+@inproceedings{
+mahmood2021multiscale,
+title={Multiscale Score Matching for Out-of-Distribution Detection},
+author={Ahsan Mahmood and Junier Oliva and Martin Andreas Styner},
+booktitle={International Conference on Learning Representations},
+year={2021},
+url={https://openreview.net/forum?id=xoHdgbQJohv}
+}
+
 @article{anderson1982reverse,
   title={Reverse-time diffusion equation models},
   author={Anderson, Brian DO},
@@ -190,14 +330,6 @@ Publisher: Association for Computing Machinery},
   booktitle={NeurIPS},
   year={2019}
 }
-
-@article{Grathwohl2020,
-  title={Your classifier is secretly an energy based model and you should treat it like one},
-  author={Grathwohl, Will and Wang, Kuan-Chieh and Jacobsen, Joern-Henrik and Duvenaud, David and Norouzi, Mohammad and Swersky, Kevin},
-  booktitle={International Conference on Learning Representations},
-  year={2019}
-}
-
 
 @inproceedings{Zhai2016,
   title={Deep Structured Energy Based Models for Anomaly Detection},
