--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -9,11 +9,9 @@
 \newcommand{\Abi}[2]{\noindent #1 \hspace{1.5cm} \= #2 \\}
 
 \begin{tabbing}
-\Abi{ABD}{All But Dissertation}
-\Ab{I/O}{Input/Output}
-\Ab{IPC}{Inter-Process Communication}
-\Ab{IPI}{Inter-Processor Interrupt}
-\Ab{WSS}{Working Set Size}
+\Abi{EBM}{Energy-Based Model}
+\Ab{DSM}{Denoising Score Matching}
+\Ab{OOD}{Out-of-Distribution Detetction}
 \Ab{AYO}{Add Your Own in alphabetic order\ldots}
 \end{tabbing}
 
