--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,182 @@
+@article{schlegl2019f,
+  title={f-AnoGAN: Fast unsupervised anomaly detection with generative adversarial networks},
+  author={Schlegl, Thomas and Seeb{\"o}ck, Philipp and Waldstein, Sebastian M and Langs, Georg and Schmidt-Erfurth, Ursula},
+  journal={Medical image analysis},
+  volume={54},
+  pages={30--44},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+
+@article{Casey2018adolescent,
+  title={The adolescent brain cognitive development (ABCD) study: imaging acquisition across 21 sites},
+  author={Casey, BJ and Cannonier, Tariq and Conley, May I and Cohen, Alexandra O and Barch, Deanna M and Heitzeg, Mary M and Soules, Mary E and Teslovich, Theresa and Dellarco, Danielle V and Garavan, Hugh and others},
+  journal={Developmental cognitive neuroscience},
+  volume={32},
+  pages={43--54},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{Stephens:2020bo,
+author = {Stephens, Rebecca L and Langworthy, Benjamin W and Short, Sarah J and Girault, Jessica B and Styner, Martin and Gilmore, John H},
+title = {{White Matter Development from Birth to 6~Years of Age: A Longitudinal Study.}},
+journal = {Cerebral cortex (New York, N.Y. : 1991)},
+year = {2020},
+volume = {7},
+pages = {7456},
+month = jun
+}
+
+@article{Gilmore:2020ct,
+author = {Gilmore, John H and Langworthy, Benjamin and Girault, Jessica B and Fine, Jason and Jha, Shaili C and Kim, Sun Hyung and Cornea, Emil and Styner, Martin},
+title = {{Individual Variation of Human Cortical Structure Is Established in the First Year of Life.}},
+journal = {Biological psychiatry. Cognitive neuroscience and neuroimaging},
+year = {2020},
+month = jun
+}
+
+
+@article{Papamakarios2019,
+author = {Papamakarios, George and Nalisnick, Eric and Rezende, Danilo Jimenez and Mohamed, Shakir and Lakshminarayanan, Balaji},
+title = {Normalizing Flows for Probabilistic Modeling and Inference},
+year = {2021},
+issue_date = {January 2021},
+publisher = {JMLR.org},
+volume = {22},
+number = {1},
+issn = {1532-4435},
+journal = {J. Mach. Learn. Res.},
+month = {jan},
+articleno = {57},
+numpages = {64},
+}
+
+@inproceedings{Papamakarios2017masked,
+  title={Masked autoregressive flow for density estimation},
+  author={Papamakarios, George and Pavlakou, Theo and Murray, Iain},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2338--2347},
+  year={2017}
+}
+
+@misc{Xu2015turkergaze,
+      title={TurkerGaze: Crowdsourcing Saliency with Webcam based Eye Tracking}, 
+      author={Pingmei Xu and Krista A Ehinger and Yinda Zhang and Adam Finkelstein and Sanjeev R. Kulkarni and Jianxiong Xiao},
+      year={2015},
+      eprint={1504.06755},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@article{Yu2015lsun,
+  title={Lsun: Construction of a large-scale image dataset using deep learning with humans in the loop},
+  author={Yu, Fisher and Seff, Ari and Zhang, Yinda and Song, Shuran and Funkhouser, Thomas and Xiao, Jianxiong},
+  journal={arXiv preprint arXiv:1506.03365},
+  year={2015}
+}
+
+@inproceedings{Deng2009imagenet,
+  title={Imagenet: A large-scale hierarchical image database},
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  booktitle={2009 IEEE conference on computer vision and pattern recognition},
+  pages={248--255},
+  year={2009},
+  organization={Ieee}
+}
+
+@article{Netzer2011reading,
+  title={Reading digits in natural images with unsupervised feature learning},
+  author={Netzer, Yuval and Wang, Tao and Coates, Adam and Bissacco, Alessandro and Wu, Bo and Ng, Andrew Y},
+  year={2011}
+}
+
+@article{Krizhevsky2009learning,
+  title={Learning multiple layers of features from tiny images},
+  author={Krizhevsky, Alex and Hinton, Geoffrey and others},
+  year={2009},
+  publisher={Citeseer}
+}
+
+@inproceedings{Lee2018,
+archivePrefix = {arXiv},
+arxivId = {1711.09325},
+author = {Lee, Kimin and Lee, Honglak and Lee, Kibok and Shin, Jinwoo},
+booktitle = {6th International Conference on Learning Representations, ICLR 2018 - Conference Track Proceedings},
+eprint = {1711.09325},
+publisher = {International Conference on Learning Representations, ICLR},
+title = {{Training confidence-calibrated classifiers for detecting out-of-distribution samples}},
+year = {2018}
+}
+
+@article{Liang2017,
+archivePrefix = {arXiv},
+arxivId = {1706.02690},
+author = {Liang, Shiyu and Li, Yixuan and Srikant, R.},
+eprint = {1706.02690},
+journal = {6th International Conference on Learning Representations, ICLR 2018 - Conference Track Proceedings},
+month = {jun},
+publisher = {International Conference on Learning Representations, ICLR},
+title = {{Enhancing The Reliability of Out-of-distribution Image Detection in Neural Networks}},
+year = {2017}
+}
+
+@inproceedings{Hendrycks2019,
+archivePrefix = {arXiv},
+arxivId = {1610.02136},
+author = {Hendrycks, Dan and Gimpel, Kevin},
+booktitle = {5th International Conference on Learning Representations, ICLR 2017 - Conference Track Proceedings},
+eprint = {1610.02136},
+month = {oct},
+publisher = {International Conference on Learning Representations, ICLR},
+title = {{A baseline for detecting misclassified and out-of-distribution examples in neural networks}},
+year = {2017}
+}
+
+@misc{Devries,
+    title={Learning Confidence for Out-of-Distribution Detection in Neural Networks},
+    author={Terrance DeVries and Graham W. Taylor},
+    year={2018},
+    eprint={1802.04865},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@inproceedings{Ren2019,
+  title={Likelihood Ratios for Out-of-Distribution Detection},
+  author={J. Ren and Peter J. Liu and E. Fertig and Jasper Snoek and Ryan Poplin and Mark A. DePristo and Joshua V. Dillon and Balaji Lakshminarayanan},
+  booktitle={NeurIPS},
+  year={2019}
+}
+
+@inproceedings{sohl2015deep,
+  title={Deep unsupervised learning using nonequilibrium thermodynamics},
+  author={Sohl-Dickstein, Jascha and Weiss, Eric and Maheswaranathan, Niru and Ganguli, Surya},
+  booktitle={International conference on machine learning},
+  pages={2256--2265},
+  year={2015},
+  organization={PMLR}
+}
+
+@article{vincent2011connection,
+  title={A connection between score matching and denoising autoencoders},
+  author={Vincent, Pascal},
+  journal={Neural computation},
+  volume={23},
+  number={7},
+  pages={1661--1674},
+  year={2011},
+  publisher={MIT Press}
+}
+
 @techreport{hyvarinen2005,
   title = {Estimation of {{Non-Normalized Statistical Models}} by {{Score Matching}}},
   author = {Hyv{\"a}rinen, Aapo},
@@ -19,8 +198,6 @@
   address = 	 {New York, New York, USA},
   month = 	 {20--22 Jun},
   publisher =    {PMLR},
-  pdf = 	 {http://proceedings.mlr.press/v48/zhai16.pdf},
-  url = 	 {https://proceedings.mlr.press/v48/zhai16.html},
 }
 
 
@@ -31,7 +208,6 @@
  pages = {21464--21475},
  publisher = {Curran Associates, Inc.},
  title = {Energy-based Out-of-distribution Detection},
- url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/f5496252609c43eb8a3d147ab9b9c006-Paper.pdf},
  volume = {33},
  year = {2020}
 }
@@ -42,7 +218,6 @@ title={Your classifier is secretly an energy based model and you should treat it
 author={Will Grathwohl and Kuan-Chieh Wang and Joern-Henrik Jacobsen and David Duvenaud and Mohammad Norouzi and Kevin Swersky},
 booktitle={International Conference on Learning Representations},
 year={2020},
-url={https://openreview.net/forum?id=Hkxzx0NtDB}
 }
 
 @book{vershynin2018high,
@@ -116,7 +291,6 @@ pages = {101952},
 year = {2021},
 issn = {1361-8415},
 doi = {https://doi.org/10.1016/j.media.2020.101952},
-url = {https://www.sciencedirect.com/science/article/pii/S1361841520303169},
 author = {Christoph Baur and Stefan Denner and Benedikt Wiestler and Nassir Navab and Shadi Albarqouni},
 keywords = {Anomaly segmentation, Detection, Unsupervised, Brain MRI, Autoencoder, Variational, Adversarial, Generative, VAE-GAN, VAEGAN},
 }
@@ -126,7 +300,6 @@ keywords = {Anomaly segmentation, Detection, Unsupervised, Brain MRI, Autoencode
 	volume = {35},
 	issn = {0271-5333, 1527-1323},
 	shorttitle = {Understanding and {Confronting} {Our} {Mistakes}},
-	url = {http://pubs.rsna.org/doi/10.1148/rg.2015150023},
 	doi = {10.1148/rg.2015150023},
 	language = {en},
 	number = {6},
@@ -168,6 +341,22 @@ keywords = {Anomaly segmentation, Detection, Unsupervised, Brain MRI, Autoencode
   publisher={Crc Press}
 }
 
+@article{song2020improved,
+  title={Improved techniques for training score-based generative models},
+  author={Song, Yang and Ermon, Stefano},
+  journal={Advances in neural information processing systems},
+  volume={33},
+  pages={12438--12448},
+  year={2020}
+}
+
+@inproceedings{song2020score,
+  title={Score-Based Generative Modeling through Stochastic Differential Equations},
+  author={Song, Yang and Sohl-Dickstein, Jascha and Kingma, Diederik P and Kumar, Abhishek and Ermon, Stefano and Poole, Ben},
+  booktitle={International Conference on Learning Representations},
+  year={2020}
+}
+
 @inproceedings{Song2019,
   title={Generative modeling by estimating gradients of the data distribution},
   author={Song, Yang and Ermon, Stefano},
@@ -187,7 +376,6 @@ keywords = {Anomaly segmentation, Detection, Unsupervised, Brain MRI, Autoencode
 	title = {Deep {Learning} for {Anomaly} {Detection}: {A} {Review}},
 	volume = {54},
 	issn = {0360-0300},
-	url = {https://doi.org/10.1145/3439950},
 	doi = {10.1145/3439950},
 	number = {2},
 	journal = {ACM Comput. Surv.},
@@ -224,7 +412,6 @@ Publisher: Association for Computing Machinery},
     author={Songqiao Han and Xiyang Hu and Hailiang Huang and Minqi Jiang and Yue Zhao},
     booktitle={Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
     year={2022},
-    url={https://openreview.net/forum?id=foA_SFQ9zo0}
 }
 
 @InProceedings{pmlr-v80-ruff18a,
@@ -238,8 +425,6 @@ Publisher: Association for Computing Machinery},
   series = 	 {Proceedings of Machine Learning Research},
   month = 	 {10--15 Jul},
   publisher =    {PMLR},
-  pdf = 	 {http://proceedings.mlr.press/v80/ruff18a/ruff18a.pdf},
-  url = 	 {https://proceedings.mlr.press/v80/ruff18a.html},
 }
 
 @article{ruff_unifying_2021,
@@ -271,7 +456,6 @@ nalisnick2020detecting,
 title={Detecting Out-of-Distribution Inputs to Deep Generative Models Using Typicality},
 author={Eric Nalisnick and Akihiro Matsukawa and Yee Whye Teh and Balaji Lakshminarayanan},
 year={2020},
-url={https://openreview.net/forum?id=r1lnxTEYPS}
 }
 
 @inproceedings{why_norm_fails,
@@ -281,7 +465,6 @@ url={https://openreview.net/forum?id=r1lnxTEYPS}
  pages = {20578--20589},
  publisher = {Curran Associates, Inc.},
  title = {Why Normalizing Flows Fail to Detect Out-of-Distribution Data},
- url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/ecb9fe2fbb99c31f567e9823e884dbec-Paper.pdf},
  volume = {33},
  year = {2020}
 }
@@ -292,7 +475,6 @@ title={Do Deep Generative Models Know What They Don't Know? },
 author={Eric Nalisnick and Akihiro Matsukawa and Yee Whye Teh and Dilan Gorur and Balaji Lakshminarayanan},
 booktitle={International Conference on Learning Representations},
 year={2019},
-url={https://openreview.net/forum?id=H1xwNhCcYm},
 }
 
 @inproceedings{
@@ -301,7 +483,6 @@ title={Multiscale Score Matching for Out-of-Distribution Detection},
 author={Ahsan Mahmood and Junier Oliva and Martin Andreas Styner},
 booktitle={International Conference on Learning Representations},
 year={2021},
-url={https://openreview.net/forum?id=xoHdgbQJohv}
 }
 
 @article{anderson1982reverse,
@@ -358,7 +539,6 @@ journal = {6th International Conference on Learning Representations, ICLR 2018 -
 month = {jun},
 publisher = {International Conference on Learning Representations, ICLR},
 title = {{Enhancing The Reliability of Out-of-distribution Image Detection in Neural Networks}},
-url = {http://arxiv.org/abs/1706.02690},
 year = {2017}
 }
 
